# docker-gui

./: README.md  index.html  package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.js
.github/workflows/: check.yml  publish.yml  test.yml
public/: index.html
src/: App.svelte  Container.svelte  docker.ts  global.d.ts  global.scss  helpers.ts  main.ts  variables.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/docker_plugin/: commands.rs  mod.rs
src/dev/: mock.ts
src/lib/: Container.svelte  Counter.svelte  Header.svelte  Navigation.svelte
src/routes/: Container.svelte  Containers.svelte  Images.svelte  Settings.svelte
src/stores/: containers.ts  global.ts  index.ts  state.ts
