[package]
name = "docker-gui"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "docker-gui"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta-rc.0", features =["api-all"]}
bollard = "0.10.1"
futures = "0.3.13"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[[bin]]
name = "docker-gui"
path = "src/main.rs"
