[package]
name = "docker-gui"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "docker-gui"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta-rc.4", features =["api-all"]}
bollard = "0.10.1"
once_cell = "1.7.2"
futures = "0.3.13"

[build-dependencies]
tauri-build = { version = "1.0.0-beta-rc.0" }

[[bin]]
name = "docker-gui"
path = "src/main.rs"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]